# smart_rescue

./: README.md
multi_map_merge/: CMakeLists.txt  package.xml
multi_map_merge/include/map_merge/: map_merge.h
multi_map_merge/src/: map_merge.cpp
multi_map_merge/src/combine_grids/: merging_pipeline.cpp
multirobot_map_merge/: CMakeLists.txt
rocopar_bringup/: CMakeLists.txt  package.xml
rocopar_bringup/cfg/base/: base_local_planner_params.yaml  global_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
rocopar_bringup/cfg/car/: costmap_common_params.yaml  local_planner_params.yaml  move_base_params.yaml
rocopar_bringup/cfg/diff/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
rocopar_bringup/cfg/slam/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml
rocopar_bringup/launch/: complete_multi_stage.launch  multirobot_map_merge.launch  multirobot_map_merge_fix.launch  robot_bringup.launch  smart_rescue.launch
rocopar_bringup/launch/navigation/: amcl.launch  fake_localization.launch  move_base.launch
rocopar_bringup/launch/slam/: cartographer.launch  slam_gmapping.launch  slam_toolbox.launch  slam_toolbox_multi.launch
rocopar_bringup/rviz/: complete_multi_gazebo.rviz  complete_multi_stage.rviz  complete_single.rviz  complete_single_stage.rviz  mrcoe_explore.rviz  mrcoe_explore1.rviz  multi_color_map.rviz  multi_robots.rviz  rviz_basic_setup.rviz  single_gazebo.rviz  single_robot.rviz  single_robot_movebase.rviz  smart_rescue.rviz  test.rviz
rocopar_bringup/worlds/bitmaps/: chaos.yaml  maze_office.yaml  new_office_1.yaml  obstacles.yaml  (+4 more)
rocopar_motion_planner/: CMakeLists.txt  package.xml
rocopar_motion_planner/scripts/: global_planner.py
rocopar_motion_planner/src/: global_planner.py
rocopar_navigation/: CMakeLists.txt  package.xml
rocopar_navigation/launch/: move_base_flex.launch
rocopar_roadmap/: README.md  WorkPlan.md
rocopar_roadmap/roadmap_builder/: CMakeLists.txt  package.xml
rocopar_roadmap/tuw_voronoi_graph/: CMakeLists.txt  package.xml
rocopar_stageros/: CMakeLists.txt  package.xml
rocopar_stageros/launch/: maptest.launch
rocopar_stageros/src/: laser2cloud.cpp  stageros.cpp
rocopar_task_planner/: CMakeLists.txt  package.xml
rocopar_task_planner/launch/: task_planner.launch
rocopar_task_planner/scripts/: explore_via_VRP.py  task_planner_node.py
(+56 files in other folders)
